# docs/swagger.yaml
@@ -1,19 +1,4 @@
 definitions:
-  dto.Review:
-    properties:
-      description:
-        type: string
-      gameid:
-        type: integer
-      id:
-        type: integer
-      playminutes:
-        type: integer
-      playtime:
-        type: integer
-      rate:
-        type: integer
-    type: object
   models.AddReview:
     properties:
       description:
@@ -37,6 +22,23 @@ definitions:
         type: string
       name:
         type: string
+    type: object
+  models.GetReview:
+    properties:
+      description:
+        type: string
+      game:
+        $ref: '#/definitions/models.Game'
+      gameID:
+        type: integer
+      id:
+        type: integer
+      playMinutes:
+        type: integer
+      playTime:
+        type: integer
+      rate:
+        type: integer
     type: object
 info:
   contact: {}
@@ -106,7 +108,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/dto.Review'
+            $ref: '#/definitions/models.GetReview'
       summary: add game review
   /reviews/{id}:
     get:
@@ -125,6 +127,6 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/dto.Review'
+            $ref: '#/definitions/models.GetReview'
       summary: get game review by id
 swagger: "2.0"
